# vocalbin

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  Vision.md  deployment.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
examples/: round_trip.py  shared_client.py  speech_to_text.py  text_to_speech.py
tests/: test_clients.py  test_credentials.py  test_models.py  test_ports.py
vocalbin/: __init__.py  clients.py  credentials.py  interfaces.py  models.py
