[project]
name = "vocalbin"
version = "0.1.0"
description = "Typed async wrappers for OpenAI speech-to-text and text-to-speech APIs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.46.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
